replace icons, finish 50% ui

--- a/main.qrc
+++ b/main.qrc
@@ -9,5 +9,6 @@
         <file>qianyuechengjiao.png</file>
         <file>qiehuandenglu.png</file>
         <file>genjinchaxun.png</file>
+        <file>renwuguanli.png</file>
     </qresource>
 </RCC>
