--- a/logindialog.ui
+++ b/logindialog.ui
@@ -43,12 +43,12 @@
          <string>登陆名称</string>
         </property>
         <property name="buddy">
-         <cstring>loginName</cstring>
+         <cstring>loginNameComboBox</cstring>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QComboBox" name="loginName"/>
+       <widget class="QComboBox" name="loginNameComboBox"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
@@ -87,7 +87,7 @@
   </layout>
  </widget>
  <tabstops>
-  <tabstop>loginName</tabstop>
+  <tabstop>loginNameComboBox</tabstop>
   <tabstop>passwdLineEdit</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
