--- a/yuangongxinxidialog.ui
+++ b/yuangongxinxidialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>332</width>
-    <height>404</height>
+    <height>431</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,16 +18,6 @@
     <normaloff>:/images/qiehuandenglu.png</normaloff>:/images/qiehuandenglu.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="1" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0">
     <widget class="QFrame" name="frame">
      <property name="frameShape">
@@ -47,10 +37,10 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="0" column="1" colspan="2">
        <widget class="QLineEdit" name="yuangongBianhaoLineEdit"/>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="3">
        <widget class="QLabel" name="label_6">
         <property name="text">
          <string>性别</string>
@@ -60,7 +50,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
+      <item row="0" column="4">
        <widget class="QComboBox" name="xingbieComboBox">
         <item>
          <property name="text">
@@ -84,10 +74,10 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="1" column="1" colspan="2">
        <widget class="QLineEdit" name="yuanggongXingmingLineEdit"/>
       </item>
-      <item row="1" column="2">
+      <item row="1" column="3">
        <widget class="QLabel" name="label_7">
         <property name="text">
          <string>学历</string>
@@ -97,7 +87,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
+      <item row="1" column="4">
        <widget class="QComboBox" name="xueliComboBox">
         <item>
          <property name="text">
@@ -146,10 +136,10 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="2" column="1" colspan="2">
        <widget class="QLineEdit" name="shenfenzhenghaoLineEdit"/>
       </item>
-      <item row="2" column="2">
+      <item row="2" column="3">
        <widget class="QLabel" name="label_8">
         <property name="text">
          <string>婚姻状况</string>
@@ -159,7 +149,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="3">
+      <item row="2" column="4">
        <widget class="QComboBox" name="hunyinZhuangkuangComboBox">
         <item>
          <property name="text">
@@ -183,10 +173,10 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="3" column="1" colspan="2">
        <widget class="QLineEdit" name="lianxiDianhuaLineEdit"/>
       </item>
-      <item row="3" column="2">
+      <item row="3" column="3">
        <widget class="QLabel" name="label_9">
         <property name="text">
          <string>出生日期</string>
@@ -196,7 +186,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="3">
+      <item row="3" column="4">
        <widget class="QDateEdit" name="chushengRiqiRateEdit"/>
       </item>
       <item row="4" column="0">
@@ -209,10 +199,10 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="4" column="1" colspan="2">
        <widget class="QLineEdit" name="jiguanLineEdit"/>
       </item>
-      <item row="4" column="2">
+      <item row="4" column="3">
        <widget class="QLabel" name="label_10">
         <property name="text">
          <string>就职日期</string>
@@ -222,10 +212,20 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="3">
+      <item row="4" column="4">
        <widget class="QDateEdit" name="jiuzhiRiqiDateEdit"/>
       </item>
-      <item row="5" column="0">
+      <item row="5" column="0" colspan="2">
+       <widget class="QLabel" name="label_25">
+        <property name="text">
+         <string>所在权限组</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="2">
+       <widget class="QComboBox" name="quanxianzuComboBox"/>
+      </item>
+      <item row="6" column="0">
        <widget class="QLabel" name="label_11">
         <property name="text">
          <string>住址</string>
@@ -235,10 +235,10 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1" colspan="3">
+      <item row="6" column="1" colspan="4">
        <widget class="QLineEdit" name="zhuzhiLineEdit"/>
       </item>
-      <item row="6" column="0">
+      <item row="7" column="0">
        <widget class="QLabel" name="label_12">
         <property name="text">
          <string>备注</string>
@@ -248,10 +248,10 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="1" rowspan="2" colspan="3">
+      <item row="7" column="1" rowspan="2" colspan="4">
        <widget class="QPlainTextEdit" name="beizhuPlainTextEdit"/>
       </item>
-      <item row="7" column="0">
+      <item row="8" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -265,6 +265,16 @@
        </spacer>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
     </widget>
    </item>
   </layout>
