--- a/yuangongxinxidialog.ui
+++ b/yuangongxinxidialog.ui
@@ -187,7 +187,14 @@
        </widget>
       </item>
       <item row="3" column="4">
-       <widget class="QDateEdit" name="chushengRiqiRateEdit"/>
+       <widget class="QDateEdit" name="chushengRiqiRateEdit">
+        <property name="displayFormat">
+         <string>yyyy-mm-dd</string>
+        </property>
+        <property name="calendarPopup">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="label_5">
@@ -213,7 +220,14 @@
        </widget>
       </item>
       <item row="4" column="4">
-       <widget class="QDateEdit" name="jiuzhiRiqiDateEdit"/>
+       <widget class="QDateEdit" name="jiuzhiRiqiDateEdit">
+        <property name="displayFormat">
+         <string>yyyy-mm-dd</string>
+        </property>
+        <property name="calendarPopup">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="5" column="0" colspan="2">
        <widget class="QLabel" name="label_25">
@@ -263,6 +277,16 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="5" column="3">
+       <widget class="QLabel" name="label_13">
+        <property name="text">
+         <string>密码</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="4">
+       <widget class="QLineEdit" name="mimaLineEdit"/>
       </item>
      </layout>
     </widget>
