--- a/quanxianzuguanlidialog.ui
+++ b/quanxianzuguanlidialog.ui
@@ -11,12 +11,13 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>权限组管理</string>
   </property>
-  <layout class="QFormLayout" name="formLayout_2">
-   <item row="0" column="0">
-    <widget class="QTableWidget" name="tableWidget"/>
-   </item>
+  <property name="windowIcon">
+   <iconset resource="main.qrc">
+    <normaloff>:/images/quanxian.png</normaloff>:/images/quanxian.png</iconset>
+  </property>
+  <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="1">
     <widget class="QWidget" name="widget" native="true">
      <layout class="QFormLayout" name="formLayout">
@@ -73,6 +74,9 @@
       </item>
      </layout>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QListWidget" name="listWidget"/>
    </item>
   </layout>
  </widget>
