--- a/quanxianzushezhidialog.ui
+++ b/quanxianzushezhidialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>权限设置</string>
   </property>
   <property name="windowIcon">
    <iconset resource="main.qrc">
